# sastre

./: LICENSE  README.md  pyproject.toml
example/: server.py
sastre/: __init__.py  __main__.py  manager.py  renderer.py  scaffold.py
sastre/extensions/: __init__.py  alpine.py  base.py  htmx.py  lucide.py  react.py  svelte.py  tailwind.py  vue.py
